Adds hover effects to categories products and changes type of tag of image and title from div to anchor

--- a/css/style.css
+++ b/css/style.css
@@ -900,6 +900,7 @@ Version: 1.0
 
       .prod-categories__title {
         letter-spacing: 0.02rem;
+        transition: .2s ease;
       }
 
       .prod-categories .item__price {
@@ -923,7 +924,10 @@ Version: 1.0
         left: 0;
         right: 0;
         display: flex;
-        justify-content: space-around;        
+        justify-content: space-around;  
+        transform: translateY(-50%);
+        opacity: 0;
+        transition: .3s ease;
       }     
 
       .hover-buttons__item {
@@ -935,15 +939,28 @@ Version: 1.0
         background-color: #1c1a19;
         color: #fff;
         border-radius: 50%;
-        opacity: 0;
-        transform: translateY(-50%);
+        border: 1px solid #1c1a19;
         transition: .3s ease;
       }
 
-      .prod-categories__img:hover ~ .prod-categories__hover-buttons .hover-buttons__item,
-      .prod-categories__img:focus ~ .prod-categories__hover-buttons .hover-buttons__item,
       .hover-buttons__item:hover,
       .hover-buttons__item:focus {
+        color: #1c1a19;
+        text-decoration: none;
+        background-color: #fff;
+      }
+
+      .prod-categories__img:hover ~ .prod-categories__hover-buttons,
+      .prod-categories__img:focus ~ .prod-categories__hover-buttons,
+      .prod-categories__hover-buttons:hover,
+      .prod-categories__hover-buttons:focus-within,
+      .hover-buttons__item:hover {
         opacity: 1;
         transform: translateY(0);
+      }
+
+      .prod-categories__title:hover,
+      .prod-categories__title:focus {
+        color: var(--main-blue);
+        text-decoration: none;
       }
