--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,11 @@ Version: 1.0
   .q-view-popup__full-info-link:focus {
     opacity: 0.6;
   }
+
+  .q-view-popup__slide img {
+    margin-left: auto;
+    margin-right: auto;
+  }
   
 /* 5. Custom styles */
   /* 5.0. Custom containters (Bootstrap 4) */
@@ -484,7 +489,7 @@ Version: 1.0
     display: flex;
   }
 
-  /* 5.2. Slick slider in categories */
+  /* 5.2. Slick slider */
   .categories .slick-track {
     display: flex;
   }
@@ -497,7 +502,8 @@ Version: 1.0
       margin-right: -1px;
     }
 
-  .categories .slick-arrow {
+  .categories .slick-arrow,
+  .q-view-popup .slick-arrow {
     font-size: 0;
     border: none;
     padding: 0;
@@ -511,26 +517,76 @@ Version: 1.0
     outline: none;
   }
   
-  .categories .slick-arrow::before {
+  .categories .slick-arrow::before,
+  .q-view-popup .slick-arrow::before {
     transition: .3s ease;
   }
 
-  .categories .slick-prev {
+  .categories .slick-prev,
+  .q-view-popup .slick-prev {
     left: 3%;
   }
 
-  .categories .slick-next {
+  .categories .slick-next,
+  .q-view-popup .slick-next {
     right: 3%;
   }
 
-  .categories .slick-prev::before {
+  .categories .slick-prev::before,
+  .q-view-popup .slick-prev::before {
     content: "\e908";
     font-size: 2.8125rem;
   }
 
-  .categories .slick-next::before {
+  .categories .slick-next::before,
+  .q-view-popup .slick-next::before {
     content: "\e909";
     font-size: 2.8125rem;
+  }
+
+  .categories .slick-arrow:hover::before,
+  .categories .slick-arrow:focus::before,
+  .q-view-popup .slick-arrow:hover::before,
+  .q-view-popup .slick-arrow:focus::before {
+    color: var(--main-blue);
+  }
+
+  .q-view-popup .slick-dots {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+  }
+
+  .q-view-popup .slick-dots button {
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    padding: 0;
+    border: none;
+    cursor: pointer;
+    margin: 0 5px;
+    background-color: var(--main-blue);
+    transition: .3s ease;
+    opacity: .5;
+    outline: none;
+  }
+
+  .q-view-popup .slick-dots button:hover,
+  .q-view-popup .slick-dots button:focus,
+  .q-view-popup .slick-active button {
+    transform: scale(1.3);
+  }  
+
+  .q-view-popup .slick-active button {
+    transform: scale(1.3);
+    opacity: 1;
   }
 
   /* 5.3. Tabs in product categories (reassignment Bootstrap 4 tabs properties) */
@@ -1002,11 +1058,6 @@ Version: 1.0
   .categories__item:hover .categories__img,
   .categories__item:focus-within .categories__img {
     transform: scale(1.1);
-  }
-
-  .categories .slick-arrow:hover::before,
-  .categories .slick-arrow:focus::before {
-    color: var(--main-blue);
   }
 
   /* 6.4. Main */
