--- a/css/style.css
+++ b/css/style.css
@@ -1148,6 +1148,10 @@ Version: 1.0
       }
 
       /* 6.4.2.2. Popular products */
+      .popular-prods__list {
+        padding-top: 2.7rem;
+      }
+      
       .popular-prods__item {
         display: flex;
         flex-direction: column;
@@ -1159,5 +1163,5 @@ Version: 1.0
         border: 1px solid #a4a4a4;
         text-align: center;
           /* Kludge. Remove after added correct-size image to product item */
-          padding: 3.5rem 0;
+          padding: 3.7rem 0;
       }
