--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ Version: 1.0
     6.4.1. Sidebar
       6.4.1.1. Categories
       6.4.1.2. Sale
+      6.4.1.3. Tags
     6.4.2. Content
       6.4.2.1. Product categories
       6.4.2.2. Popular products
@@ -280,7 +281,8 @@ Version: 1.0
     footer,
     .header-bottom__total-price,
     .categories__title,
-    .prod-categories__tab {
+    .prod-categories__tab,
+    .sidebar-tags__item {
       text-transform: uppercase;
     }
 
@@ -1291,6 +1293,23 @@ Version: 1.0
 
       .sidebar__sale .main-banner__arrow {
         top: 40%;
+      }
+
+      /* 6.4.1.3. Tags */
+      .sidebar-tags__title {
+        text-align: center;
+        font-size: inherit;
+      }
+
+      .sidebar-tags__item {
+        display: inline-block;
+        color: #a4a4a4;
+        font-size: 0.75rem;
+        letter-spacing: 0.038rem;
+        padding: 0.2rem 1.2rem 0.3rem;
+        background-color: #f8f8f8;
+        margin-bottom: 0.5rem;
+        margin-right: 0.3rem;
       }
 
     /* 6.4.2. Content */
