--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@ Version: 1.0
     6.4.2. Content
       6.4.2.1. Product categories
       6.4.2.2. Popular products
+    6.4.3. Bottom banners
+      6.4.3.1. Second banners
   
 7. Responsive - index.html (indicate Responsive in this form for each page)
   7.1 Min-width: 1200px
@@ -244,7 +246,8 @@ Version: 1.0
     .sidebar-categories__title,
     .item__price--new,
     .promo__sale,
-    .categories__title {
+    .categories__title,
+    .second-b-banners__title {
       font-weight: 900;
     }
 
@@ -283,7 +286,8 @@ Version: 1.0
     .header-bottom__total-price,
     .categories__title,
     .prod-categories__tab,
-    .sidebar-tags__item {
+    .sidebar-tags__item,
+    .second-b-banners__title {
       text-transform: uppercase;
     }
 
@@ -1392,4 +1396,51 @@ Version: 1.0
 
       .popular-prods .hover-buttons__list {
         padding: 0 1.5rem;
-      }      
+      }
+
+      /* 6.4.3. Bottom banners */
+      .second-b-banners__category,
+      .second-b-banners__title,
+      .bottom-banners .item__price {
+        color: #ffffff;
+      }
+        /* 6.4.3.1. Second banners */
+        .bottom-banners.row.no-gutters {
+          margin-top: 79px;
+          margin-bottom: 30rem;
+        }
+
+        .main-bottom-banner.col-8 {
+          background-color: var(--main-blue);
+          height: 400px;
+        }
+
+        /* ↑ Timening properdies */
+
+        .second-b-banners__item {
+          background-repeat: no-repeat;          
+          height: 50%;
+        }
+        .second-b-banners__item:nth-child(1) {
+          padding: 1.7rem 1.9rem;
+          background-color: #e43c4c;
+          background-image: url('../img/bottom_banner-1.png');
+          background-position: 158% 370%;
+        }
+        
+        .second-b-banners__item:nth-child(2) {
+          background-color: #8562d4;
+          text-align: right;
+          background-image: url('../img/bottom_banner-2.png');
+          padding: 1.5rem 3.1rem;
+          background-position: -83% 108%;
+        }
+
+        .second-b-banners__title {
+          font-size: 1.25rem;
+          letter-spacing: 0.025rem;
+        }
+
+        .bottom-banners .item__price-list {
+          font-size: 0.938rem; 
+        }
