--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,7 @@ Version: 1.0
       margin-right: -1px;
     }
 
-  .categories .slick-arrow {
+  .slick-arrow {
     font-size: 0;
     border: none;
     padding: 0;
@@ -621,31 +621,31 @@ Version: 1.0
     outline: none;
   }
   
-  .categories .slick-arrow::before {
+  .slick-arrow::before {
     transition: .3s ease;
   }
 
-  .categories .slick-prev {
+  .slick-prev {
     left: 3%;
   }
 
-  .categories .slick-next {
+  .slick-next {
     right: 3%;
   }
 
-  .categories .slick-prev::before {
+  .slick-prev::before {
     content: "\e908";
     font-size: 2.8125rem;
   }
 
-  .categories .slick-next::before,
+  .slick-next::before,
   .q-view-popup .slick-next::before {
     content: "\e909";
     font-size: 2.8125rem;
   }
 
-  .categories .slick-arrow:hover::before,
-  .categories .slick-arrow:focus::before {
+  .slick-arrow:hover::before,
+  .slick-arrow:focus::before {
     color: var(--main-blue);
   }  
 
@@ -1532,4 +1532,12 @@ Version: 1.0
         text-align: center;
         margin-left: auto;
         margin-right: auto;
+      }
+
+      .new-products .slick-prev {
+        left: 0;
+      }
+
+      .new-products .slick-next {
+        right: 0;
       }
