--- a/css/style.css
+++ b/css/style.css
@@ -1586,6 +1586,7 @@ Version: 1.0
       }
 
       .latest-news__title {
+        display: block;
         font-size: 1.125rem;
         letter-spacing: 0.023rem;
       }
@@ -1611,4 +1612,56 @@ Version: 1.0
 
       .latest-news__tag {
         margin: 0 4px;
+      }
+
+      /* Hover and focus in latest news */
+      .latest-news__mask-cont {
+        position: relative;
+        overflow: hidden;
+      }
+
+      .latest-news__mask {
+        position: absolute;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        opacity: 0;
+        transition: .4s ease-out;
+        z-index: 1;
+      }
+  
+      .latest-news__mask-cont:hover .latest-news__mask,
+      .latest-news__mask-cont:focus-within .latest-news__mask {
+        opacity: 1; 
+      }
+
+      .latest-news__mask-link {
+        display: block;
+        padding: 0.5em 1em;
+        color: #ffffff;
+        font-weight: 700;
+        text-transform: uppercase;
+        border: 2px solid #ffffff;
+        border-radius: 50px;
+        transition: transform .2s ease-in-out .3s, background-color .3s ease, color .3s ease;
+        transform: translateY(-30px) scaleY(0);
+        opacity: 0;
+        z-index: 2;
+      }
+  
+      .latest-news__mask-cont:hover .latest-news__mask-link,
+      .latest-news__mask-cont:focus-within .latest-news__mask-link{
+        opacity: 1;
+        transform: translateY(0) scaleY(1);        
+      }  
+      
+      .latest-news__mask-link:hover,
+      .latest-news__mask-link:focus {
+        background-color: #ffffff;
+        color: #000000;
+        text-decoration: none;
       }
