--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ Version: 1.0
       6.4.3.2. Main banner
     6.4.4. New products
     6.4.5. Latest news
-  
+  6.5. Footer
 7. Responsive - index.html (indicate Responsive in this form for each page)
   7.1 Min-width: 1200px
   7.2 Max-width: 1200px
@@ -252,7 +252,8 @@ Version: 1.0
     .promo__sale,
     .categories__title,
     .second-b-banners__title,
-    .main-b-banner__title {
+    .main-b-banner__title,
+    .footer-links__title {
       font-weight: 900;
     }
 
@@ -1579,6 +1580,7 @@ Version: 1.0
       /* 6.4.5. Latest news */
       .latest-news {
         text-align: center;
+        margin-bottom: 7.2rem;
       }
 
       .latest-news__item {
@@ -1612,3 +1614,74 @@ Version: 1.0
       .latest-news__tag {
         margin: 0 4px;
       }
+  /* 6.5. Footer */
+  footer {
+    background-color: #262626;
+    color: #868686;
+    text-align: center;
+  }
+
+  footer .container {
+    max-width: 1200px;
+  }
+
+  .footer__logo {
+    margin-bottom: 5.4rem;
+  }
+
+  .footer__text {
+    font-size: 15px;
+    margin-bottom: 5rem;
+  }
+
+  .footer__separator {
+    background-color: var(--main-gray);
+  }
+
+  .footer__bottom {
+    text-align: initial;
+    margin-top: 3.5rem;
+  }
+
+  .footer-links__title {
+    color: #fff;
+    font-size: 16px;
+  }
+
+  .footer-link__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .footer-link__link {
+    line-height: 2.2;
+    font-size: 15px;
+  }
+  
+  .footer__subscribe {
+    margin-bottom: 2rem;
+  }
+
+  .footer__input {
+    background-color: transparent;
+    border: 1px solid var(--main-gray);
+    padding: 0.7rem 1.3rem;
+    color: #fff;
+    border-right: none;
+  }
+
+  .footer__button {
+    background-color: transparent;
+    border: 1px solid var(--main-gray);
+    padding: 0.7rem 1.1rem;
+    color: #fff;
+    margin-left: -3px;
+  }
+
+  .footer-icons-list__item {
+    display: inline-block;
+    border: 1px solid var(--main-gray);
+    padding: 0.7rem 1.1rem;
+    margin-right: 0.7rem;
+  }
