--- a/css/style.css
+++ b/css/style.css
@@ -1695,7 +1695,28 @@ Version: 1.0
 
 /* 7. Responsive - index.html (indicate Responsive in this form for each page) */
   /* 7.1 Min-width: 1200px */
-  .test {position: fixed; top: 10px; right: 10px; color: tomato; z-index: 99999999;}
+  .test {position: fixed; top: 10px; left: 10px; color: tomato; z-index: 99999999;}
+
+  @media only screen and (max-width: 1849.98px){
+    .test::after  { content: '@media (max-width: 1850px)';}
+    .header-top__navbar .navbar-nav {
+      margin: 0 !important;
+    }
+
+    .buy-theme {
+      border: 1px solid #1c1a19;
+      border-radius: 5px;
+      padding: 0.5rem 0.5rem;
+      transition: .3s ease;
+    }
+
+    .buy-theme:hover,
+    .buy-theme:focus {
+      color: #ffffff;
+      background-color: #000000;
+      text-decoration: none;
+    }
+  }
   
   @media only screen and (min-width: 1200px){
     .test:after  { content: '@media (min-width: 1200px) >>>';} 
