--- a/css/style.css
+++ b/css/style.css
@@ -1732,11 +1732,23 @@ Version: 1.0
       width: 100%;
     }
   }
-  
-  @media only screen and (min-width: 1200px){
-    .test:after  { content: '@media (min-width: 1200px) >>>';} 
-    
-  }
+    /* Super kludge for correct position items in main navigation in header */
+    @media only screen and (min-width: 1200px) and (max-width: 1327.98px) {
+      .test:after  { content: '@media (min-width: 1200px) >>>';} 
+      .header-top__left {
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-bottom: 1rem;
+      }
+
+      .header-top__right {
+        flex: 0 0 100%;
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1rem;
+      }
+    }
 
   @media only screen and (max-width: 1199.98px){
       .test:after  { content: '@media (max-width: 1200px)';}   
