--- a/css/style.css
+++ b/css/style.css
@@ -1040,7 +1040,6 @@ Version: 1.0
       color: #ffffff;
       font-size: 5rem;
       letter-spacing: 0.1rem;
-      word-break: break-all;
     }
 
     .main-banner__btn:hover {
@@ -1734,7 +1733,7 @@ Version: 1.0
   }
     /* Super kludge for correct position items in main navigation in header */
     @media only screen and (min-width: 1200px) and (max-width: 1327.98px) {
-      .test:after  { content: '@media (min-width: 1200px) >>>';} 
+      .test:after  { content: '@media (min-width: 1200px [col-xl]) >>>';} 
       .header-top__left {
         flex: 0 0 100%;
         max-width: 100%;
@@ -1751,22 +1750,33 @@ Version: 1.0
     }
 
   @media only screen and (max-width: 1199.98px){
-      .test:after  { content: '@media (max-width: 1200px)';}   
-      
+      .test:after  { content: '@media (max-width: 1200px [col-lg])';}   
+      .header-top {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: #fff;
+        z-index: 1000;
+      }
+
+      .header-bottom__logo {
+        margin-right: 0;
+      }
   }
 
   @media only screen and (max-width: 991.98px){
-      .test:after  { content: '@media (max-width: 992px)';}  
+      .test:after  { content: '@media (max-width: 992px [col-md])';}  
       
   }
 
   @media only screen and (max-width: 767.98px){
-      .test:after  { content: '@media (max-width: 768px)';}  
+      .test:after  { content: '@media (max-width: 768px [col-sm])';}  
 
   }
 
   @media only screen and (max-width: 575.98px){
-      .test:after  { content: '@media (max-width: 576px)';}  
+      .test:after  { content: '@media (max-width: 576px [col-])';}  
 
   }
 
